--- a/pom.xml
+++ b/pom.xml
@@ -77,9 +77,9 @@
 			<version>2.4.4</version>
 		</dependency>
 		<dependency>
-			<groupId>org.apache.poi</groupId>
-			<artifactId>poi-ooxml</artifactId>
-			<version>4.1.2</version>
+			<groupId>net.sf.jasperreports</groupId>
+			<artifactId>jasperreports</artifactId>
+			<version>6.21.2</version>
 		</dependency>
 	</dependencies>
 
